--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rusty-onion"
 version = "0.1.0"
-authors = ["awick"]
+authors = ["Adam Wick <awick@uhsure.com>"]
 
 [workspace]
 
