--- a/simple-rsa/Cargo.toml
+++ b/simple-rsa/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "simple-rsa"
 version = "0.1.0"
-authors = ["awick"]
+authors = ["Adam Wick <awick@uhsure.com>"]
 
 [dependencies]
 num          = "^0.1.39"
