Some handy parsing utilities. These need clean up.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ authors = ["Adam Wick <awick@uhsure.com>"]
 [workspace]
 
 [dependencies]
-simple-rsa = { path = "simple-rsa" }
+parsing_utils = { path = "parsing_utils" }
+simple_rsa    = { path = "simple_rsa"    }
