BROKEN: Bring in my authority parsing code.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Adam Wick <awick@uhsure.com>"]
 [workspace]
 
 [dependencies]
+authority     = { path = "authority"     }
 consensus     = { path = "consensus"     }
 parsing_utils = { path = "parsing_utils" }
 simple_rsa    = { path = "simple_rsa"    }
