More underscore, less dash.

--- a/authority/Cargo.toml
+++ b/authority/Cargo.toml
@@ -16,6 +16,6 @@ nom           = "^3.1.0"
 parsing_utils = { path = "../parsing_utils" }
 rand          = "^0.3"
 ring          = "^0.12.1"
-simple-rsa    = { path = "../simple-rsa" }
+simple_rsa    = { path = "../simple_rsa" }
 tokio-core    = "^0.1.9"
 untrusted     = "^0.5.0"
