Rename simple_rsa to tor_crypto; more non-RSA crypto is coming.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ fetch         = { path = "fetch"         }
 log           = "^0.3.0"
 parsing_utils = { path = "parsing_utils" }
 router_info   = { path = "router_info"   }
-simple_rsa    = { path = "simple_rsa"    }
+tor_crypto    = { path = "tor_crypto"    }
 tor_config    = { path = "tor_config"    }
 
 [build-dependencies]
