--- a/authority/Cargo.toml
+++ b/authority/Cargo.toml
@@ -16,5 +16,5 @@ nom           = "^3.1.0"
 parsing_utils = { path = "../parsing_utils" }
 rand          = "^0.3"
 ring          = "^0.12.1"
-simple_rsa    = { path = "../simple_rsa" }
 tokio-core    = "^0.1.9"
+tor_crypto    = { path = "../tor_crypto" }
