--- a/router_info/Cargo.toml
+++ b/router_info/Cargo.toml
@@ -16,6 +16,6 @@ log           = "^0.3.0"
 nom           = "^3.1.0"
 parsing_utils = { path = "../parsing_utils" }
 ring          = "^0.12.1"
-simple_rsa    = { path = "../simple_rsa"    }
 tokio-core    = "^0.1.9"
 tor_config    = { path = "../tor_config"    }
+tor_crypto    = { path = "../tor_crypto"    }
