[BROKEN] Checkpointing the inclusion of ed25519 stuff.

--- a/tor_crypto/Cargo.toml
+++ b/tor_crypto/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 authors = ["Adam Wick <awick@uhsure.com>"]
 
 [dependencies]
+byteorder    = "^1.1.0"
+chrono       = "^0.4.0"
 num          = "^0.1.39"
 rand         = "^0.3"
 
