--- a/tor_crypto/Cargo.toml
+++ b/tor_crypto/Cargo.toml
@@ -8,6 +8,8 @@ byteorder    = "^1.1.0"
 chrono       = "^0.4.0"
 num          = "^0.1.39"
 rand         = "^0.3"
+ring         = "^0.12.1"
+untrusted    = "^0.5.1"
 
 [dev-dependencies]
 quickcheck   = "^0.4.1"
