Very awkward, but successful, signature checking.

--- a/router_info/Cargo.toml
+++ b/router_info/Cargo.toml
@@ -19,3 +19,4 @@ ring          = "^0.12.1"
 tokio-core    = "^0.1.9"
 tor_config    = { path = "../tor_config"    }
 tor_crypto    = { path = "../tor_crypto"    }
+untrusted     = "^0.5.1"
