[UGLY] Tremendously ugly code, but I think this does all the necessary cross-checks on router info docs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rusty-onion"
 version = "0.1.0"
 authors = ["Adam Wick <awick@uhsure.com>"]
+links = "tc_curve25519"
 build = "build.rs"
 
 [workspace]
